# BidderProject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  pages.yml  web-deploy.yml
.streamlit/: config.toml  secrets.toml.example
agents/: composition.py  context.py  converse.py  follow_up.py  intake.py  intake_schema.py  intelligence.py  jcr.py  orchestrator.py  postmortem.py  pricing.py  pricing_tool_use.py
api/: main.py
api/routes/: audit.py  bids.py  companies.py  documents.py  intelligence.py  webhooks.py
core/: anthropic_client.py  audit.py  audit_export.py  batch.py  celery_app.py  cost.py  db.py  embeddings.py  logging.py  pricing_simulator.py  settings.py  states.py  tasks.py
db/: ingest_corpus.py  migrate.py  schema.sql  seed.py  seed_all.py  seed_archetype_b.py  seed_archetype_c.py  seed_brief.sql  seed_supabase.sql  seed_utils.py
db/migrations/: 0001_initial.sql  0002_audit_log.sql  0003_margin_snapshot.sql  001_brief_schema.sql  002_quote_messages_sender.sql  003_business_noun.sql  (+14 more)
design/: PLAN.md  README.md  agent-port-notes.md
docs/: ARCHITECTURE.md  _config.yml  architecture_spec_v2.md  brief.md  demo_storyboard.md  deploy.md  index.md
scripts/: build_brief.py
tests/: conftest.py  test_api_routes.py  test_audit_export.py  test_audit_log.py  test_batch.py  test_cache_prefix_stability.py  test_cadence.py  test_capacity_lookup.py  test_composition_streaming.py  test_converse_agent.py  test_cost.py  test_demo_e2e.py  test_exclusions_verification.py  test_intake_agent.py  test_intake_classifier.py  test_intake_parse_structured.py  test_intelligence_agent.py  test_jcr_agent.py  test_jcr_reconciliation.py  test_margin_snapshot.py  test_material_cost.py  test_orchestrator_flow.py  test_postgres_integration.py  test_postmortem_agent.py  test_pricing_agent.py  test_pricing_math.py  test_pricing_simulator.py  test_pricing_tool_use.py  test_prompt_caching.py  test_state_machine.py  test_voice_fidelity.py  test_webhooks.py
tools/: actual_hours_lookup.py  cadence_lookup.py  capacity_lookup.py  exclusions_verify.py  labor_cost_lookup.py  material_cost_lookup.py  pdf_extraction.py  vector_search.py  win_rate_lookup.py
ui/: streamlit_app.py
web/: .dev.vars.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  wrangler.toml
(+198 files in other folders)
