[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proservice-bid-intelligence"
version = "0.2.0"
description = "Multi-agent AI platform for SMB specialty contractors — bid generation, job-cost reconciliation, capacity-aware operating intelligence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Steve Lozano" }]
license = { text = "Proprietary" }

dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "psycopg[binary,pool]>=3.1.18",
    "pgvector>=0.2.5",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "tenacity>=8.2.3",
    "openai>=1.30.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "python-dateutil>=2.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]
docs = [
    "weasyprint>=61.0",
    "markdown>=3.5.0",
]

[tool.setuptools]
packages = [
    "agents",
    "tools",
    "api",
    "api.routes",
    "db",
    "core",
    "ui",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests requiring a real Postgres+pgvector instance (set INTEGRATION_DB=true)",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["agents", "tools", "core", "api", "db"]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "db/seed*.py",      # seed scripts are demo data, not load-bearing logic
    "core/celery_app.py",
    "core/tasks.py",    # exercised in deploy, not unit tests
    "ui/*",             # Streamlit UI tested by hand
]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true
skip_covered = false
precision = 1

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
